Se creó con Colab

--- a/semana1/LinaFlor.ipynb
+++ b/semana1/LinaFlor.ipynb
@@ -1417,13 +1417,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 27,
       "metadata": {
         "id": "VFqnxaES2Rkg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4b1b2070-16f5-4f2c-dc26-91ca39215e13"
+        "outputId": "5db38e0e-3369-472c-d5ee-4ec37a0117fb"
       },
       "outputs": [
         {
@@ -1432,8 +1432,9 @@
           "text": [
             "El mejor regalo? El perdón...\n",
             "['E', 'l', ' ', 'm', 'e', 'j', 'o', 'r', ' ', 'r', 'e', 'g', 'a', 'l', 'o', '?', ' ', 'E', 'l', ' ', 'p', 'e', 'r', 'd', 'ó', 'n', '.', '.', '.']\n",
-            "['E', 'l', ' ', 'm', 'e', 'j', 'o', 'r', ' ', ' ', 'E', 'l', ' ', 'p', 'e', 'r', 'd', 'ó', 'n', '.', '.', '.']\n",
-            "El mejor  El perdón...\n"
+            "['E', 'l', ' ', 'm', 'e', 'j', 'o', 'r', ' ', 'p', 'e', 'r', 'd', 'ó', 'n', '.', '.', '.']\n",
+            "['E', 'l', ' ', 'm', 'e', 'j', 'o', 'r', ' ', 'p', 'e', 'r', 'd', 'ó', 'n', '.']\n",
+            "El mejor perdón.\n"
           ]
         }
       ],
@@ -1444,8 +1445,9 @@
         "print(list_frase) #deben jugar con esta lista\n",
         "\n",
         "#Aquí va la solución...\n",
-        "list_frase = list_frase[:9] + list_frase[16:]\n",
-        "\n",
+        "list_frase = list_frase[:9] + list_frase[20:]\n",
+        "print(list_frase)\n",
+        "list_frase = list_frase[:16] + list_frase[18:]\n",
         "print(list_frase)\n",
         "\n",
         "nueva_frase = ''.join(list_frase)\n",
